# mathpuz-solver

./: CMakeLists.txt  README.md
cmake/: cadical.cmake  kissat.cmake
include/: exact_cover.h  sat.h
include/evil/: EvilThread.cpp  EvilThread.h  EvilThreadTrampoline_ARM64.s
include/geom2d/: base.h  figure.h  isometry.h  lattice.h
kropki/: CMakeLists.txt  README.md  kropki-sat.cpp  kropki.cpp
kropki/puzzles/: 16x16-1  9x9-1  9x9-2  9x9-3
shape-cutting/: CMakeLists.txt  shape-cutting.cpp  visualize.py
shape-cutting/puzzles/hexagon_5x5/: 10p  5p
shape-cutting/puzzles/hexagon_7x7/: 7p
shape-cutting/puzzles/square_5x5_cornerless/: 12p  8p
shape-cutting/puzzles/square_7x7_cornerless/: 12p  3p  6p  8p
shape-cutting/puzzles/triangle_5x5_median/: 10p  5p
shape-dividing/: CMakeLists.txt  README.md  shape-dividing-sat.cpp
shape-dividing/puzzles/apple_2x2/: 5p
shape-dividing/puzzles/apple_2x2_median/: 10p  15p  5p
shape-filling/: CMakeLists.txt  README.md  shape-filling-recursive.cpp  shape-filling-sat.cpp  shape-filling-x.cpp
shape-filling/puzzles/: rectangle_10x19_holey_septomino  rectangle_3x7_holey_tetromino  rectangles_6x5_pentomino  square_10x10_cornerless_septomino  square_10x10_septomino  square_4x4_tetromino  square_5x5_cornerless_tromino  square_7x7_cornerless_tromino  square_8x8_cornerless_tromino
sudoku/: CMakeLists.txt  README.md  sudoku-gen.cpp  sudoku-sat.cpp  sudoku-x.cpp  sudoku.cpp
sudoku/puzzles/: 100x100-1  25x25-1  36x36-1  49x49-1  64x64-1  6x6-1  81x81-1  9x9-1  9x9-4  9x9-5  9x9-6  9x9-7
sudoku/puzzles/16x16/: 1  10  11  12  (+11 more)
(+58 files in other folders)
